appId: "com.recipedia"
---
- tapOn:
    text: "󰍉"
    label: Open Search screen
- swipe:
    start: "50%,90%"
    end: "50%,20%"
    label: Swipe down to see other items
- swipe:
    start: "50%,90%"
    end: "50%,20%"
    label: Swipe down to see other items
- tapOn:
    text: "Pesto Pasta"
    label: Open Pesto Pasta recipe
- runFlow: ../../../asserts/Recipe/ReadOnly/pestoPasta.yaml
- tapOn:
    text: "󰏫"
    waitToSettleTimeoutMs: 0
    retryTapIfNoChange: false
    label: Tap on the Edit button
- runFlow: ../../../asserts/Recipe/Edit/pestoPasta.yaml
- tapOn:
    text: "󰌍"
    label: Back to the Search Screen
- pressKey: "BACK"
