appId: "com.recipedia"
---
- tapOn:
    text: "󰍉"
    label: Open Search screen
- tapOn:
    id: "SearchBar"
    label: Open Search Bar
- inputText:
    text: "P"
    label: Input text 'P' in the keyboard
- runFlow: ../../../asserts/Search/SearchBar/searchBarFilteredOnP.yaml
- inputText:
    text: "a"
    label: Inout text 'a' in the Bar
- runFlow: ../../../asserts/Search/SearchBar/searchBarFilteredOnPa.yaml
- pressKey: 'backspace'
- runFlow: ../../../asserts/Search/SearchBar/searchBarFilteredOnP.yaml
- inputText:
    text: "i"
    label: Inout text 'i' in the Bar
- runFlow: ../../../asserts/Search/SearchBar/searchBarFilteredOnPi.yaml
- hideKeyboard:
    label: Close the keyboard
- tapOn:
    text: "Margherita Pizza"
    label: Click directly on selected recipe
- runFlow: ../../../asserts/Search/searchScreenFilteredOnPizza.yaml
- pressKey: "BACK"
