appId: "com.recipedia"
---
- tapOn:
    text: "󰍉"
    label: Open Search screen

- tapOn:
    id: "SearchBar"
    label: Open Search Bar
- hideKeyboard:
    label: Close the keyboard
- runFlow: ../../../asserts/Search/SearchBar/searchBarNotFiltered.yaml
- tapOn:
    text: "󰅖"
    label: Tap on cross icon to close the Search Bar
- runFlow: ../../../asserts/Search/searchScreenVisible.yaml
- pressKey: "BACK"
