appId: "com.recipedia"
---
- tapOn:
    text: "󰍉"
    label: Open Search screen

- tapOn:
    id: "SearchBar"
    label: Open Search Bar
- inputText:
    text: "Lentil"
    label: Input text 'Lentil' in the Bar
- pressKey: "enter"
- runFlow: ../../../asserts/Search/searchScreenFilteredOnLentilCury.yaml
- tapOn:
    text: "󰅖"
    label: Remove the searched name
- runFlow: ../../../asserts/Search/searchScreenVisible.yaml
- pressKey: "BACK"
