appId: "com.recipedia"
---
- tapOn:
    text: "󰍉"
    label: Open Search screen
- tapOn:
    id: "SearchBar"
    label: Open Search Bar
- inputText:
    text: "Ca"
    label: Input text 'Ca' in the Bar
- hideKeyboard:
    label: Close the keyboard
- runFlow: ../../../asserts/Search/SearchBar/searchBarFilteredOnCa.yaml
- pressKey: "enter"
- runFlow: ../../../asserts/Search/searchScreenFilteredOnCa.yaml
- pressKey: "BACK"
