appId: "com.recipedia"
---
- tapOn:
    id: "Home::SearchBar::CustomTextInput"
    label: "Tap on search input"

- eraseText:
    label: "Clear search text"

- tapOn:
    id: "Home::SearchBar::ClearButton"
    label: "Clear search filter"
