appId: "com.recipedia"
---
- tapOn:
    id: "IngredientsSettings::BottomActionButton"
    label: "Tap Add button to create a new ingredient"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::Name::CustomTextInput"
    label: "Focus on ingredient name input field"

- inputText:
    text: "RecipeIngredient"
    label: "Enter new ingredient name"

- hideKeyboard:
    label: "Dismiss keyboard"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::Menu::Button"
    label: "Open type dropdown menu"

- tapOn:
    text: "Vegetable"
    label: "Select vegetable type"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::Unit::CustomTextInput"
    label: "Focus on unit input field"

- inputText:
    text: "g"
    label: "Enter unit"

- hideKeyboard:
    label: "Dismiss keyboard"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::ConfirmButton"
    label: "Confirm adding the new ingredient"
