appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Go to Search screen via bottom tab"

- tapOn:
    id: "SearchScreen::RecipeCards::1::.*"
    label: "Open a recipe"

- tapOn:
    id: "Recipe::BottomActionButton"
    label: "Add the recipe to the shopping list"

- runFlow:
    file: "../../../asserts/alerts/fr/addingRecipe.yaml"
    label: "Check alert is translated"
    env:
      RECIPE_NAME: "Chicken Tacos"

- tapOn:
    id: "BottomTabs::Shopping"
    label: "Go back to Shopping screen"
