appId: "com.recipedia"
---
- runFlow:
    file: "../../recipe/adding/fr/addRecipeImage.yaml"
    label: "Add recipe image in French"

- tapOn:
    id: "RecipeTitle::CustomTextInput"
    label: "Tap on recipe title text input"
- inputText:
    text: "Titre"
    label: "Write a title in the input text"
- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 60
    centerElement: true

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Tap on recipe ingredients button to add ingredient"
- tapOn:
    id: "RecipeIngredients::0::QuantityInput"
    label: "Tap on recipe ingredients quantity text input"
- inputText:
    text: "200"
    label: "Write an ingredient quantity in the input text"
- hideKeyboard:
    label: "Hide the keyboard"

- tapOn:
    id: "RecipeIngredients::0::NameInput::CustomTextInput"
    label: "Tap on recipe ingredient name text input"
- inputText:
    text: "Avocado"
    label: "Write an ingredient name in the input text"
- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "RecipeTime::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll until preparation time is visible"

- tapOn:
    id: "RecipeTime::NumericTextInput"
    label: "Focus on the preparation time text input"

- inputText:
    text: "5"
    label: "Write a time in the input text"
- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 60

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    label: "Tap on recipe preparation adding button"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::0::Content"
    direction: DOWN
    speed: 60
    centerElement: true

- tapOn:
    id: "RecipePreparation::EditableStep::0::TextInputTitle::CustomTextInput"
    label: "Tap on recipe preparation title text input"
- inputText:
    text: "Titre de preparation"
    label: "Write a preparation title in the input text"
- hideKeyboard:
    label: "Close the keyboard"
- tapOn:
    id: "RecipePreparation::EditableStep::0::TextInputContent::CustomTextInput"
    label: "Tap on recipe preparation content text input"
- inputText:
    text: "Etape de la preparation"
    label: "Write a preparation content in the input text"
- hideKeyboard:
    label: "Close the keyboard"
