appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Go to Search screen via bottom tab"

- tapOn:
    id: "SearchScreen::RecipeCards::1::.*"
    label: "Open a recipe"
- runFlow:
    file: "../../../asserts/parameters/language/recipeReadOnly.yaml"
    label: "Check that the fixed text of a read only recipe screen are displayed in French"

- tapOn:
    id: "Recipe::AppBar::Edit"
    label: "Enter edit mode for the recipe"
- runFlow:
    file: "../../../asserts/parameters/language/recipeEdit.yaml"
    label: "Check that the fixed text of a edit recipe screen are displayed in French"

- runFlow:
    file: "../../recipe/adding/ocr/camera/openOCRCamera.yaml"
    label: "Open camera"
- runFlow:
    file: "../../../asserts/parameters/language/recipeOcr.yaml"
    label: "Check that the fixed text of a add by image recipe screen are displayed in French"
- tapOn:
    id: "Recipe::AppBar::BackButton"
    label: "Quit the recipe screen"
- runFlow:
    file: "./recipeAlerts.yaml"
    label: "Check that recipe adding alerts are translated"
