appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Go to Search screen via bottom tab"

- assertVisible:
    id: "SearchScreen::SearchBar"
    text: "Titre de la recette"
    label: "Search bar placeholder is displayed in French"

- assertVisible:
    id: "SearchScreen::FiltersToggleButtons-text"
    text: "Ajouter un filtre"
    label: "Add filter text is displayed in French"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Press adding filter to check other texts"

- runFlow:
    file: "../../../asserts/search/fr/filters/filtersViewNoFilter.yaml"
    label: "Assert all filter accordions in French"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Close the filters"
